Fixes #190 by correctly handling invalid query fields in RollupCalcItemReplacer

--- a/rollup/core/classes/RollupCalcItemReplacer.cls
+++ b/rollup/core/classes/RollupCalcItemReplacer.cls
@@ -126,25 +126,59 @@ public without sharing class RollupCalcItemReplacer {
     SObjectType calcItemType = calcItems[0].getSObjectType();
     List<String> queryFields = RollupEvaluator.getWhereEval(metadata.CalcItemWhereClause__c, calcItemType).getQueryFields();
     Map<String, SObjectField> fieldNameToToken = calcItemType.getDescribe().fields.getMap();
-    List<String> validQueryFields = new List<String>();
+    Boolean hasUnqueriedParentFields = false;
     for (String queryField : queryFields) {
       String fieldPart = queryField.substringBefore('.');
-      String fieldName = fieldPart.endsWith('__r') ? fieldPart.removeEnd('__r') + '__c' : fieldPart + 'Id';
-      if (queryField.contains('.') && fieldNameToToken.containsKey(fieldName) && fieldNameToToken.get(fieldName).getDescribe().isNamePointing() == false) {
-        validQueryFields.add(queryField);
-        validQueryFields.add(fieldName);
+      String fieldName = this.getFullyQualifiedFieldName(fieldPart);
+      if (
+        queryField.contains('.') &&
+        fieldNameToToken.containsKey(fieldName) &&
+        fieldNameToToken.get(fieldName).getDescribe().isNamePointing() == false &&
+        this.hasParentField(calcItems[0], fieldNameToToken, queryField) == false
+      ) {
+        hasUnqueriedParentFields = true;
+        break;
       }
     }
 
-    if (validQueryFields.isEmpty() == false) {
-      // re-initialize the Set to avoid: System.FinalException: Collection is read-only
-      Set<String> includedFields = new Set<String>(calcItems[0].getPopulatedFieldsAsMap().keySet());
-      includedFields.addAll(queryFields);
+    if (hasUnqueriedParentFields) {
+      Set<String> fieldsToInclude = new Set<String>(queryFields);
+      for (String populatedFieldName : calcItems[0].getPopulatedFieldsAsMap().keySet()) {
+        if (fieldNameToToken.containsKey(populatedFieldName)) {
+          fieldsToInclude.add(populatedFieldName);
+        }
+      }
       List<SObject> objIds = calcItems; // for bind variable
-      String queryString = RollupQueryBuilder.Current.getQuery(calcItemType, new List<String>(includedFields), 'Id', '=');
+      String queryString = RollupQueryBuilder.Current.getQuery(calcItemType, new List<String>(fieldsToInclude), 'Id', '=');
       RollupLogger.Instance.log('replacing calc items with parent-level where clause using query string:', queryString, LoggingLevel.FINE);
       calcItems = Database.query(queryString);
     }
     return calcItems;
+  }
+
+  private String getFullyQualifiedFieldName(String fieldPart) {
+    return fieldPart.endsWith('__r') ? fieldPart.removeEnd('__r') + '__c' : fieldPart + 'Id';
+  }
+
+  private Boolean hasParentField(SObject record, Map<String, Schema.SObjectField> fieldNameToToken, String fieldPath) {
+    List<String> splitParts = fieldPath.split('\\.');
+    while (splitParts.size() > 1) {
+      String fieldPart = splitParts.remove(0);
+      String field = this.getFullyQualifiedFieldName(fieldPart);
+      Schema.SObjectField fieldToken = fieldNameToToken.get(field);
+      if (fieldToken.getDescribe().getReferenceTo().isEmpty() == false) {
+        SObject parentRecord = record.getSObject(fieldPart);
+        if (parentRecord == null) {
+          return false;
+        } else {
+          return this.hasParentField(parentRecord, parentRecord.getSObjectType().getDescribe().fields.getMap(), String.join(splitParts, '.'));
+        }
+      }
+    }
+    try {
+      return record.get(splitParts.remove(0)) != null;
+    } catch (SObjectException ex) {
+      return false;
+    }
   }
 }
