Add Scheduled Flow Invocation Point for Rollup

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -202,7 +202,8 @@ global without sharing virtual class Rollup {
     FROM_SCHEDULED,
     FROM_LWC,
     FROM_SINGULAR_PARENT_RECALC_LWC,
-    FROM_STATIC_LOGGER
+    FROM_STATIC_LOGGER,
+    FROM_SCHEDULED_FLOW
   }
 
   protected Rollup() {
